_html/src/sass/modules/_content-card.scss
$content__card-item-height: 203;

.content__card__hl {
    display: inline-block;
    padding-top: rem(40);
    padding-bottom: rem(30);
}

.content__card__hl__link {
    float: right;
    margin-top: rem(62);
}

.content__card__item {
    display: inline-block;
    margin-bottom: rem(20);
    border-radius: $global-border-radius;
    overflow: hidden;
    height: rem($content__card-item-height);
    background: #ddd;
    width: 100%;
    position: relative;

    &:after {
        display: none;
    }
}

.content__card__item--large {
    height: rem(($content__card-item-height * 2) + 20);
}

.content__card__item__body {
    position: absolute;
    bottom: 0;
    left: 0;
    color: $color-light-grey;
    padding: rem(20);

    .content__card__item--large & {
        padding: rem(30);
    }
}

.content__card__item__hl {
    .content__card__item--large & {
        @extend .h5;
    }
}

.content__card__item__meta {
    font-size: rem(12);
    line-height: rem(18);
}

.content__card__item__fig {
    position: relative;
    height: 100%;
    width: 100%;
    background-size: cover;
    background-repeat: no-repeat;

    &:after {
        content: "";
        display: block;
        background: linear-gradient(rgba($color-black, 0.1), rgba($color-black, 0.9));
        width: 100%;
        height: 100%;
        position: absolute;
        left: 0;
        top: 0;
    }
}

.content__multi__col {
    padding-top: rem(45);
}

.content__multi__col__header__hl {
    color: $color-primary;
}

.content__multi__col__header__text {
    padding-bottom: rem(45);
}

.content__multi__col__body__detail__text {
    padding-bottom: rem(25);
    min-height: rem(130);

    @extend .text__secondary;
}

